updated study 2 discussion

--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -563,24 +563,24 @@ Overall, the original IAS total score had the greatest number of significant sta
 
 <!-- Aim and conceptual focus -->
 
-Study 2 examined the dispositional correlates of the IAS and whether the refined 14-item version with subdimensions offers practical advantages over the original 21-item scale, using a meta-analytical approach leveraging large statistical power. The findings clarify the conceptual boundaries of self-reported interoceptive accuracy and underscore the domain-specific nature of these standardized associations.
+Using a meta-analytical approach with data across 17 datasets, Study 2 examined the dispositional correlates of the IAS and explored whether structural improvements of the 14-item IAS translated into clearer and more reliable associations compared to the  original 21-item scale. 
 
 <!-- Interoception and correlates - item specific -->
-The IAS showed positive associations with most MAIA facets, except for the Not-Distracting and Not-Worrying subscales, replicating prior findings [@brand2023; @todd2022]. Associations with the BPQ Body Awareness subscale were consistent with previous reports on positive association between these measures [@brand2023; @koike2023; @gaggero2021], whereas indices of autonomic reactivity were more strongly and negatively associated with IAS scores, supporting earlier observations that reactivity may reflect aspects of bodily signal processing captured by self-reported interoceptive accuracy [@todd2022]. In contrast, measures of interoceptive difficulties, including alexithymia and interoceptive confusion, were negatively associated with IAS scores, consistent with prior research [@brand2023; @koike2023; @lin2023; @murphy2019]. 
+The IAS had positive associations with all MAIA facets except for the Not-Distracting and Not-Worrying subscales, replicating prior findings [@brand2023; @todd2022]. Similarly, associations between the IAS and BPQ Body Awareness subscale were positive, consistent with previous research [@brand2023; @koike2023; @gaggero2021]. Indices of autonomic reactivity, however, were more strongly and negatively associated with IAS scores, supporting earlier observations that reactivity may reflect aspects of bodily signal processing captured by self-reported interoceptive accuracy [@todd2022]. In contrast, measures of interoceptive difficulties, including alexithymia and interoceptive confusion, were negatively associated with IAS scores, consistent with previous research [@brand2023; @koike2023; @lin2023; @murphy2019].
 
-Although associations between the IAS and the BPQ subscales replicated prior work, interpretation remains uncertain due to conceptual ambiguity in the BPQ–Body Awareness subscale. Prior studies have reported non-existent [e.g., @murphy2019], negative [@lin2023], and even quadratic relationships [e.g., @campos2021], and some authors have suggested that these mixed findings stem from divergent interpretations of the items—specifically, whether they capture attentional focus on bodily sensations or perceived accuracy in detecting them [e.g., @gabriele2022dissociations; @campos2021]. Thus, although we observed a positive association between the BPQ–Body Awareness and the IAS, this result should be interpreted with caution, and future studies should assess participants' understanding of BPQ items to clarify the nature of this relationship.
+Although associations between the IAS and the BPQ Body Awareness subscale replicated several previous findings, other studies have found non-existent [e.g., @murphy2019], negative [@lin2023], and even quadratic relationships [e.g., @campos2021]. Mixed findings may stem from inconsistent interpretations of the items in the BPQ subscales, specifically, whether they capture attentional focus on bodily sensations or perceived accuracy in detecting them [e.g., @gabriele2022dissociations; @campos2021].  Thus, although we observed a positive association between the BPQ Body Awareness and the IAS, this result should be interpreted with caution, and future studies should assess participants’ understanding of BPQ items to clarify the nature of this relationship.
 
-Across mood, most item pairings displayed small-to-moderate standardized coefficients, indicating shared variance between interoceptive self-reports and affective tendencies, aligning with previous findings [@murphy2019; @koike2023]. In contrast, associations with psychopathology were more selective: negative associations were primarily observed for visceral pairings such as Hungry–Thirsty and Bruise–Blood sugar, whereas other domains yielded weaker or nonsignificant effects. This pattern suggests that self-reported interoceptive accuracy is more strongly associated with affective and clinical traits for visceral sensations than for somatic or respiratory reflexes.
+Across mood, most item pairs displayed small-to-moderate standardized coefficients, indicating shared variance between interoceptive self-reports and affective tendencies, aligning with previous finding [@murphy2019; @koike2023]. In contrast, associations with psychopathology were more selective: negative associations were primarily observed for visceral pairings such as Hungry–Thirsty and Bruise–Blood sugar, whereas other domains had weaker or nonsignificant effects. This pattern suggests that self-reported interoceptive accuracy for visceral sensations may be more strongly associated with affective and clinical traits compared to accuracy for somatic or respiratory reflexes.
 
 <!-- Personality, worldview, and boundaries of interoception -->
 
-Associations with personality traits followed a similar domain-specific structure. Effects for the full IAS largely reflected contributions from specific pairings: Extraversion showed its strongest associations for Bruise-Blood sugar, Neuroticism and Honesty–Humility for Hungry–Thirsty, and Openess, Conscientiousness and Agreeableness for the full scale. These results indicate that associations between interoceptive self-report and personality dimensions may depend on the bodily domain represented.
+Associations with personality traits followed a similar domain-specific structure, with effects for the full IAS largely reflected contributions from specific pairings. Extraversion was most strongly associated with Bruise-Blood sugar, Neuroticism and Honesty–Humility with Hungry–Thirsty, and Openness, Conscientiousness and Agreeableness with the full scale. These results indicate that associations between interoceptive self-report and personality dimensions may depend on the bodily domain represented. These results partially align with prior work reporting a negative association between Neuroticism and the IAS [@brand2023]. However, associations involving other personality traits are less well established and require replication to situate the present findings within the broader literature.
 
-Associations with belief systems were uniformly small. Weak positive associations emerged between the IAS and certain primal world beliefs (e.g., perceiving the world as comprehensible or alive) and selected conspiracy belief dimensions, particularly Global Conspiracies and Personal Wellbeing. These effects were limited to specific pairings, most often Hungry–Thirsty and Bruise–Blood sugar, indicating that links between interoceptive self-report and broader cognitive or worldview constructs are modest and domain-specific.
+Associations with belief systems were uniformly small. Weak positive associations emerged between the IAS and certain primal world beliefs (e.g., perceiving the world as comprehensible or alive) and selected conspiracy belief dimensions, particularly Global Conspiracies and Personal Wellbeing. These effects were limited to specific item pairs, most often Hungry–Thirsty and Bruise–Blood sugar, indicating that links between interoceptive self-report and broader cognitive or worldview constructs are likely modest and domain-specific
 
 <!-- Short IAS benefits and summary-->
-In summary, the 14-item IAS performed similarly to the original 21-item version, showing comparable patterns of association with mood, psychopathology, and interoceptive measures. Although associations between the IAS and external constructs were typically captured by the original score, they were often not uniform across bodily domains and driven by specific item pairs. In particular, the Hungry–Thirsty and Bruise–Blood sugar items pairs showed the strongest and most consistent relationships with interoceptive, affective, and personality measures, whereas other pairs contributed little unique information, particularily in measures of psychopathologies and beliefs.
-The homeostatic salience and universality of the former pair, and the contextual relevance and visual/psychological promiennce of the latter, might contribute to their stronger associations with dispositional traits. Overall, these findings suggest that the shorter scale captures domain-specific patterns, offering a more efficient, nuanced, and interpretation-precise measure of self-reported interoceptive accuracy.
+
+In summary, the 14-item IAS performed similarly to the original 21-item version, showing comparable patterns of association with mood, psychopathology, and interoceptive measures. Although associations between the IAS and external constructs were typically captured by the original score, they were often not uniform across bodily domains and were instead driven by specific item pairs. In particular, the Hungry–Thirsty and Bruise–Blood sugar items pairs had the strongest and most consistent associations to interoceptive, affective, and personality measures. Other pairs contributed little unique information, particularly in measures of psychopathologies and beliefs. The homeostatic salience and universality of the Hungry-Thirsty pair, and the contextual relevance and visual/psychological prominence of the Bruise-Blood pair, might contribute to their stronger associations with dispositional traits. Overall, findings suggest that the refined 14-item scale captured domain-specific patterns, potentially offering a more efficient, nuanced, and interpretation-precise measure of self-reported interoceptive accuracy.
 
 # General Discussion
 
